--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     return width / 2;
   };
   var getWizardY = function(height) {
-    return height * 2 / 3;
+    return height / 3;
   };
 </script>
 <script src="./js/game.js"></script>
