Исправил исходн располож Мага по ширине

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
   };
 
   var getWizardX = function(width) {
-    return width / 2;
+    return width / 2 - wizardWidth / 2;
   };
   var getWizardY = function(height) {
     return height / 3;
