--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
   </div>
 </template>
 
-<script>
+<script  type="text/javascript">
   var fireballSize = 22;
 
   var getFireballSpeed = function(left){
